feat(api): Increase @Transactional Coverage Throughout Service Layer