@@ -12,10 +12,10 @@ import com.jfs415.packetwatcher_api.util.SearchTimeframe;
 import com.jfs415.packetwatcher_api.views.collections.StatsCollectionView;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import javax.persistence.Entity;
 import java.io.Serializable;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
@@ -28,58 +28,46 @@ public class StatsServiceImpl {
 		this.repositoryManagerImpl = repositoryManagerImpl;
 	}
 
-	//@Transactional
-	//public void write(StatsRecord stats) throws InvalidEventArgumentException {
-	//	try {
-	//		validate(stats.getClass());
-	//	} catch (EventAnnotationNotFoundException e) {
-	//		e.printStackTrace();
-	//	}
-	//
-	//	PacketWatcherStatsRepository<StatsRecord, Serializable> repository = repositoryManager.getStatsRepository(stats.getClass());
-	//	repository.write(stats);
-	//}
-
+	@Transactional(noRollbackFor = StatsAnnotationNotFoundException.class)
 	public StatsCollectionView getStatsByType(Class<?> statsType) {
 		try {
 			validate(statsType);
 		} catch (StatsAnnotationNotFoundException e) {
-			e.printStackTrace();
 			return new StatsCollectionView();
 		}
 
 		PacketWatcherStatsRepository<StatsRecord, Serializable> repository = repositoryManagerImpl.getStatsRepository(statsType);
 
-		return new StatsCollectionView(repository.findAll().stream().map(StatsRecord::toStatsView).collect(Collectors.toList()));
+		return new StatsCollectionView(repository.findAll().stream().map(StatsRecord::toStatsView).toList());
 	}
 
+	@Transactional(noRollbackFor = StatsAnnotationNotFoundException.class)
 	public StatsCollectionView getStatsByTypeAndLastCaughtWithTimeframe(Class<?> statsType, SearchTimeframe timeframe) {
 		try {
 			validate(statsType);
 		} catch (StatsAnnotationNotFoundException e) {
-			e.printStackTrace();
 			return new StatsCollectionView();
 		}
 
-		return lookupStatsByFirstCaughtAndTimeframe(repositoryManagerImpl.getStatsRepository(statsType), timeframe);
+		return lookupStatsByLastCaughtAndTimeframe(repositoryManagerImpl.getStatsRepository(statsType), timeframe);
 	}
 
+	@Transactional(noRollbackFor = StatsAnnotationNotFoundException.class)
 	public StatsCollectionView getStatsByTypeAndFirstCaughtWithTimeframe(Class<?> statsType, SearchTimeframe timeframe) {
 		try {
 			validate(statsType);
 		} catch (StatsAnnotationNotFoundException e) {
-			e.printStackTrace();
 			return new StatsCollectionView();
 		}
 
 		return lookupStatsByFirstCaughtAndTimeframe(repositoryManagerImpl.getStatsRepository(statsType), timeframe);
 	}
 
+	@Transactional(noRollbackFor = StatsAnnotationNotFoundException.class)
 	public StatsCollectionView getStatsByTypeWithRecordsCaughtAmount(Class<?> statsType, SearchAmount amount) {
 		try {
 			validate(statsType);
 		} catch (StatsAnnotationNotFoundException e) {
-			e.printStackTrace();
 			return new StatsCollectionView();
 		}
 
@@ -92,14 +80,14 @@ public class StatsServiceImpl {
 		switch (timeframe.getTimeframe()) {
 			case BEFORE:
 				stats = repository.findAllByLastCaughtBefore(timeframe.getTimestamp()).stream();
-				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).collect(Collectors.toList()));
+				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).toList());
 			case AFTER:
 				stats = repository.findAllByLastCaughtAfter(timeframe.getTimestamp()).stream();
-				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).collect(Collectors.toList()));
+				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).toList());
 			case BETWEEN:
 				RangedSearchTimeframe dualTimeframe = (RangedSearchTimeframe) timeframe;
 				stats = repository.findAllByLastCaughtBetween(dualTimeframe.getStart(), dualTimeframe.getEnd()).stream();
-				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).collect(Collectors.toList()));
+				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).toList());
 			default:
 				return new StatsCollectionView();
 		}
@@ -111,14 +99,14 @@ public class StatsServiceImpl {
 		switch (timeframe.getTimeframe()) {
 			case BEFORE:
 				stats = repository.findAllByFirstCaughtBefore(timeframe.getTimestamp()).stream();
-				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).collect(Collectors.toList()));
+				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).toList());
 			case AFTER:
 				stats = repository.findAllByFirstCaughtAfter(timeframe.getTimestamp()).stream();
-				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).collect(Collectors.toList()));
+				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).toList());
 			case BETWEEN:
 				RangedSearchTimeframe dualTimeframe = (RangedSearchTimeframe) timeframe;
 				stats = repository.findAllByFirstCaughtBetween(dualTimeframe.getStart(), dualTimeframe.getEnd()).stream();
-				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).collect(Collectors.toList()));
+				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).toList());
 			default:
 				return new StatsCollectionView();
 		}
@@ -130,20 +118,20 @@ public class StatsServiceImpl {
 		switch (amount.getOperator()) {
 			case LESS_THAN:
 				stats = repository.findAllByRecordsCaughtLessThan(amount.getAmount()).stream();
-				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).collect(Collectors.toList()));
+				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).toList());
 			case LESS_THAN_OR_EQUAL_TO:
 				stats = repository.findAllByRecordsCaughtLessThanEqual(amount.getAmount()).stream();
-				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).collect(Collectors.toList()));
+				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).toList());
 			case GREATER_THAN:
 				stats = repository.findAllByRecordsCaughtGreaterThan(amount.getAmount()).stream();
-				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).collect(Collectors.toList()));
+				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).toList());
 			case GREATER_THAN_OR_EQUAL_TO:
 				stats = repository.findAlByRecordsCaughtGreaterThanEqual(amount.getAmount()).stream();
-				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).collect(Collectors.toList()));
+				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).toList());
 			case BETWEEN:
 				RangedSearchAmount rangedAmount = (RangedSearchAmount) amount;
 				stats = repository.findAllByRecordsCaughtBetween(rangedAmount.getStart(), rangedAmount.getEnd()).stream();
-				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).collect(Collectors.toList()));
+				return new StatsCollectionView(stats.map(StatsRecord::toStatsView).toList());
 			default:
 				return new StatsCollectionView();
 		}
